--- a/package.json
+++ b/package.json
@@ -15,21 +15,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gun": "^0.2020.1235",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "nanoid": "^3.1.30",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
     "@apollo/client": "^3.4.16",
     "@prisma/client": "^3.4.0",
     "apollo-server-core": "^3.4.0",
     "apollo-server-micro": "^3.4.0",
     "axios": "^0.24.0",
     "graphql": "^15.7.2",
-    "gun": "^0.2020.1235",
-    "sqlite": "^4.0.23",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
     "next": "^12.0.2",
     "next-auth": "^4.0.0-next.26",
     "prisma": "^3.4.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sqlite": "^4.0.23"
   }
 }
