--- a/package.json
+++ b/package.json
@@ -23,16 +23,13 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.4.16",
-    "@prisma/client": "^3.4.0",
     "apollo-server-core": "^3.4.0",
     "apollo-server-micro": "^3.4.0",
     "axios": "^0.24.0",
     "graphql": "^15.7.2",
     "next": "^12.0.2",
     "next-auth": "^4.0.0-next.26",
-    "prisma": "^3.4.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sqlite": "^4.0.23"
+    "react-dom": "^17.0.2"
   }
 }
