testing the auth area for url link.
fixed battle error. added loading.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.10.7",
     "gun": "^0.2020.1235",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
